# ivo_franka

./: CMakeLists.txt  package.xml  requirements.txt
env-hooks/: 99.ivo_franka_functions.bash
launch/: cylinder_closer.launch  full.launch  fullBear.launch  fullBox.launch  fullTeapot.launch  rvizpat.launch
rviz/: panda.rviz
src/: LRM_reconstruct.py  View_Space.hpp  boot_instructions.txt  evaluate.py  evaluation_runner.py  evaluator.py  frankaActions .py  frankaActions.py  franka_move.py  franka_pick2.cpp  franka_poses.py  img_getter.py  model_compare.py  open_cv_reconstr.cpp  pipeline.py  pointCloud.py  reconstruction.py  requirements.txt  rgbd_reconstruct.py  run.py  runner.py  sorted_vs (copy).txt  sorted_vs.txt  teapot.ply  teapot_pc.ply  tf_d.cpp  tot_sort.txt  tripoSR.py
src/model_editor_models/teddy_bear/: model.config  model.sdf
src/model_editor_models/teddy_bear_colour/: model.config  model.sdf
src/model_editor_models/unit_cylinder/: model.sdf
src/model_editor_models/utah_teapot/: model.config  model.sdf
urdf/: _d435i.gazebo.xacro  _d435i.urdf.xacro  panda.urdf.xacro
worlds/: box.world  cylinder_closer.world  fullBear.world  fullBear_copy.world  lab_pick_place3.world  lab_pick_place4.world  lab_pick_place_realsense.world  lab_pick_place_teapot.world  teapot.world
