<?xml version="1.0"?>
<package format="2">
  <name>ivo_franka</name>
  <version>0.0.0</version>
  <description>The ivo_franka package</description>

  <maintainer email="PatinoMinanJJ@cardiff.ac.uk">jjpatino</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Test Franka -->
  <depend>test_franka_simulation_bringup</depend>
  <depend>nodelet</depend>
  
  <!-- Intel d435i -->
  <depend>realsense2_camera</depend>
  <depend>realsense2_description</depend>
  <depend>realsense_gazebo_plugin</depend>
  
  <depend>depth_image_proc</depend>
  


  <export>
  </export>
</package>
